@@ -1,3 +1,7 @@
+2008-02-03  Mike Krüger <mkrueger@novell.com> 
+
+	* Mono.TextEditor/LineSplitter.cs: Added some safety checks.
+
 2008-02-01  Mike Krüger <mkrueger@novell.com> 
 
 	* Mono.TextEditor/TextEditor.cs: Fixed bug.
